WebKit's Enter Full Screen for <video> elements isn't working https://bugs.webkit.org/show_bug.cgi?id=117001

Patch by Ruth Fong <ruth_fong@apple.com> on 2013-05-30
Reviewed by Jer Noble.

Fix workflow to allow a video to enter into full screen
mode from a kWKContextMenuItemTagEnterVideoFullscreen
context menu item by denoting the enterFullscreenForVideo
call as a user gesture, so Document::requestFullScreenForElement
will execute correctly.

No new tests. Covered by media/context-menu-actions.html,
which is disabled due to bug #116651.

* rendering/HitTestResult.cpp:
(WebCore::HitTestResult::enterFullscreenForVideo):

Canonical link: https://commits.webkit.org/135323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151003 268f45cc-cd09-0410-ab3c-d52691b4dbfc